spacing fixed

--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@
     letter-spacing: 0;
     color: var(--primary-blue);
     text-align: left;
-    font: normal normal bold 37px/32px Ubuntu;
+    font: normal normal bold 37px/42px Ubuntu;
     letter-spacing: 0px;
     text-transform: capitalize;
     opacity: 1;
